activity_lottery_result.xml修正
「終了ボタン」を削除した。
アプリの処理でアプリを終了させることは推奨されていなかったため。
それに伴い、不要になった文字列を「strings.xml」から削除した。
また、「strings.xml」はその他の修正も加えている。

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,8 +16,7 @@
     <string name="lottery_button">次へ</string>
     <string name="result_text1">抽選結果</string>
     <string name="result_text2">が当選しました！！</string>
-    <string name="result_button1">もう一度</string>
-    <string name="result_button2">終了</string>
+    <string name="result_button">もう一度</string>
     <string name="deleteButton">削除</string>
 
 
